<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alex.rcup.alextest.fragments.reglages"
    android:background="@drawable/background"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <!-- TODO: Partie Entête -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <View
            android:layout_width="50dp"
            android:layout_height="1.5dp"
            android:background="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"/>

        <com.alex.rcup.alextest.tools.TextViewOswaldLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reglages_titre"
            android:id="@+id/reglages_titre"
            android:layout_gravity="center_horizontal|top"
            android:includeFontPadding="false"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="35dp">

        <!-- TODO : 1er colonne-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp">

            <com.alex.rcup.alextest.tools.TextViewOriginalGaramondItalique
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_subcat_1"
                android:id="@+id/reglages_subcat_1"
                android:layout_gravity="center_horizontal"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_texte_1"
                android:id="@+id/reglages_texte_1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>

            <View
                android:layout_width="50dp"
                android:layout_height="1.85dp"
                android:background="@android:color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <com.alex.rcup.alextest.tools.TextViewOriginalGaramondItalique
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_subcat_2"
                android:id="@+id/reglages_subcat_2"
                android:layout_gravity="center_horizontal"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reglages_nbpaires"
                android:id="@+id/reglages_nbpaires"
                android:layout_gravity="center"
                android:textSize="29.7sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_texte_2"
                android:id="@+id/reglages_texte_2"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"/>




        </LinearLayout>

        <!-- TODO : 2er colonne-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:layout_marginLeft="15dp">

            <com.alex.rcup.alextest.tools.TextViewOriginalGaramondItalique
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_subcat_3"
                android:id="@+id/reglages_subcat_3"
                android:layout_gravity="center_horizontal"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="30dp"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="103dp"
                android:layout_height="29dp"
                android:text="@string/reglages_choixnotif_1"
                android:id="@+id/reglages_choixnotif_1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/crochet"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_choixnotif_2"
                android:id="@+id/reglages_choixnotif_2"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_choixnotif_3"
                android:id="@+id/reglages_choixnotif_3"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_choixnotif_4"
                android:id="@+id/reglages_choixnotif_4"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <View
                android:layout_width="50dp"
                android:layout_height="1.85dp"
                android:background="@android:color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <com.alex.rcup.alextest.tools.TextViewOriginalGaramondItalique
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_subcat_4"
                android:id="@+id/reglages_subcat_4"
                android:layout_gravity="center_horizontal"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="30dp"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="103dp"
                android:layout_height="29dp"
                android:text="@string/reglages_choixsemelles_1"
                android:id="@+id/reglages_choixsemelles_1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@drawable/crochet"/>
            <com.alex.rcup.alextest.tools.TextViewOswaldLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglages_choixsemelles_2"
                android:id="@+id/reglages_choixsemelles_2"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="16sp"
                android:textColor="@color/black"/>


        </LinearLayout>





    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- TODO: Partie Navigation -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="0.85dp"
                android:background="@android:color/white"
                android:layout_marginBottom="6dp"
                android:layout_gravity="center_horizontal|bottom"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom">

                <ImageButton
                    android:layout_width="56dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageButton_nav_retour"
                    android:layout_gravity="center"
                    android:background="@drawable/retour"/>
                <ImageButton
                    android:layout_width="85dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageButton_nav_home"
                    android:layout_gravity="center"
                    android:background="@drawable/home"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>
                <ImageButton
                    android:layout_width="56dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageButton_nav_coupe"
                    android:layout_gravity="center"
                    android:background="@drawable/coupe"/>
            </LinearLayout>
        </LinearLayout>


    </FrameLayout>


</LinearLayout>
