<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alex.rcup.alextest.fragments.sav"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp">

    <View
        android:layout_width="50dp"
        android:layout_height="1.5dp"
        android:background="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>

    <com.alex.rcup.alextest.tools.TextViewOswaldLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sav_titre"
        android:id="@+id/sav_titre"
        android:layout_gravity="center_horizontal|top"
        android:includeFontPadding="false"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="230.2dp"
            android:layout_height="242.2dp"
            android:background="@drawable/back"
            android:layout_marginBottom="23dp">
            <com.alex.rcup.alextest.tools.TextViewOriginalGaramondItalique
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sav_texte_1"
                android:id="@+id/sav_texte_1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="top"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <com.alex.rcup.alextest.tools.TextViewOriginalGaramondItalique
            android:layout_width="103dp"
            android:layout_height="29dp"
            android:text="@string/sav_texte_2"
            android:id="@+id/sav_texte_2"
            android:layout_gravity="center_horizontal"
            android:includeFontPadding="false"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/crochet"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- TODO: Partie Navigation -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="0.85dp"
                android:background="@android:color/white"
                android:layout_marginBottom="6dp"
                android:layout_gravity="center_horizontal|bottom"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom">

                <ImageButton
                    android:layout_width="56dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageButton_nav_retour"
                    android:layout_gravity="center"
                    android:background="@drawable/retour"/>
                <ImageButton
                    android:layout_width="85dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageButton_nav_home"
                    android:layout_gravity="center"
                    android:background="@drawable/home"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>
                <ImageButton
                    android:layout_width="56dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageButton_nav_coupe"
                    android:layout_gravity="center"
                    android:background="@drawable/coupe"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
